# sudoku

./: license.txt  nefarious.txt  sudoku.cabal
data/: blank.txt  easy1.txt  hard.txt  hard1.txt  hard2.txt  hard3.txt  hard4.txt  hard5.txt  invalidSize.txt  nearly.txt  telegraphJan19th.txt  unsolvable1.txt  unsolvable2.txt  unsolvable3.txt
src/: Main.hs  Sudoku.hs
src/Sudoku/: Common.hs  ReadWrite.hs  Solver1.hs  Solver2.hs
